# semester-work-fibonacci-heap

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  benchmark_insert.cpp  benchmark_merge.cpp  benchmark_remove.cpp  demo_benchmark.cpp
benchmark/result/: benchmark_insert_result.csv  benchmark_merge_result.csv  benchmark_remove_result.csv
cmake/: CompilerWarnings.cmake
dataset/: CMakeLists.txt  dataset-generated.csv  generate_csv_dataset.cpp  generate_csv_dataset.py
dataset/data/: dataset-example.csv
dataset/data/insert/01/: 100000.csv  500.csv  5000.csv
dataset/data/insert/02/: 10000.csv  100000.csv  500.csv  5000.csv  500000.csv
dataset/data/insert/03/: 1000.csv  10000.csv  100000.csv  500.csv  5000.csv  50000.csv
dataset/data/insert/04/: 100.csv  10000.csv  100000.csv  5000.csv  50000.csv  500000.csv
dataset/data/insert/05/: 100.csv  10000.csv  500.csv  50000.csv
dataset/data/insert/07/: 10000.csv  50000.csv
dataset/data/insert/08/: 100.csv  10000.csv  50000.csv  500000.csv
dataset/data/insert/09/: 1000.csv  10000.csv  100000.csv  500.csv  50000.csv
dataset/data/insert/10/: 1000.csv  10000.csv
dataset/data/merge/01/: 1000.csv  50000.csv
dataset/data/merge/02/: 1000.csv
dataset/data/merge/03/: 500000.csv
dataset/data/merge/04/: 500.csv
dataset/data/merge/05/: 100000.csv
dataset/data/merge/06/: 100000.csv  500.csv  5000.csv
dataset/data/merge/07/: 100.csv  100000.csv  500000.csv
dataset/data/merge/08/: 5000.csv
dataset/data/merge/09/: 5000.csv  500000.csv
dataset/data/merge/10/: 100000.csv  500.csv
dataset/data/remove/01/: 100.csv  10000.csv  500000.csv
dataset/data/remove/02/: 100.csv  50000.csv
dataset/data/remove/03/: 100.csv
dataset/data/remove/04/: 1000.csv
dataset/data/remove/05/: 1000.csv  5000.csv  500000.csv
dataset/data/remove/06/: 100.csv  1000.csv  10000.csv  50000.csv  500000.csv
dataset/data/remove/07/: 1000.csv  500.csv  5000.csv
dataset/data/remove/08/: 1000.csv  100000.csv  500.csv
dataset/data/remove/09/: 100.csv
dataset/data/remove/10/: 100.csv  5000.csv  50000.csv  500000.csv
examples/: CMakeLists.txt
include/: Fibonacci_heap.hpp  data_structure.hpp
src/: Fibonacci_heap.cpp  data_structure.cpp
